Donat lite med ModelSim samt lagt till simrun

--- a/eth_v1_00_a/bench/Makefile
+++ b/eth_v1_00_a/bench/Makefile
@@ -20,7 +20,7 @@ RTL_SRC1+= ethrx_clk_sampler.vhd ethrx_mii_to_byte.vhd
 RTL_SRC1+= ethrx_byte_to_word.vhd ethrx_statemachine.vhd
 RTL_SRC1+= ethrx_debug.vhd ethrx_regfile.vhd
 #building blocks
-RTL_SRC0 = blockram.vhd blockram_dp.vhd blockram_fifo.vhd crc.vhd fdre.vhd
+RTL_SRC0 = blockram_dp.vhd blockram_fifo.vhd crc.vhd fdre.vhd
 
 RTL_SRC = $(RTL_SRC0) $(RTL_SRC1) $(RTL_SRC2) $(RTL_SRC3)
 RTL_TRG: $(RTL_SRC:%.vhd=tmp/.done.%.vhd.)
@@ -34,10 +34,10 @@ SIM_SRC = tb_debug_functions.vhd tb_opb_packet_loopback.vhd tb_mii_receiver_mode
 SIM_TRG: $(SIM_SRC:%.vhd=tmp/.done.%.vhd.) RTL_TRG
 
 vcom:
-	vcom $(RTL_SRC:%.vhd=rtl/%.vhd) bench/$(BENCH_ENTITY).vhd
+	vcom $(RTL_SRC:%.vhd=../hdl/vhdl/%.vhd) $(SIM_SRC)
 
 vsim: vcom
-	vsim $(BENCH_ENTITY)
+	vsim -do "run 500 us" $(BENCH_ENTITY)
 
 tmp/.done.elab.: SIM_TRG
 	ncelab -v93 $(BENCH)
@@ -47,6 +47,9 @@ elab: tmp/.done.elab.
 
 sim: elab
 	ncsim -gui $(BENCH)
+
+simrun: elab
+	ncsim -run -exit $(BENCH)
 
 cleaner:
 	rm -rf -- tmp work worklib
